--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<div class="row">
 						<div class="col-md-6"  class="div1">
 							<div class="hovereffect" id="author_images">
-						        <img class="img-responsive" src="aniruddha.png" alt="Aniruddha" id="author_images_body">
+						        <img class="img-responsive" src="aniruddha.jpg" alt="Aniruddha" id="author_images_body">
 						        <div class="overlay">
 						            <h2 id="author_body_head">Aniruddha Chattopadhyay</h2>
 						            <p id="author_body_body_ani">He is enrolled in 5 year integrated Dual Degree Course under the Department of Industrial and Systems Engineering with Quality Engineering and Design management(Industrial Electronics) as his discipline. He is currently a sophomore at IIT Kharagpur and an Executive Member of The Institute Wellness Group (IWG). With solicitousness in a moment of alacrity, he co-founded the idea of creating the first of its kind Previous Year Solution Book for the first Year students of IIT Kharagpur. He has also achieved a Department Change, his former discipline being Applied Geology.</p>
