--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 						        <img class="img-responsive" src="aadi3.jpg" alt="Aadi" id="author_images_body">
 						        <div class="overlay">
 						            <h2 id="author_body_head">Aadi Swadipto Mondal</h2>
-						            <p id="author_body_body_ani">He is enrolled in 4 year B.Tech under The Department of Electronics and Electrical Communication Engineering. He is currently a sophomore at IIT Kharagpur. He is also a member of Ariel Robotics Kharagpur(ARK). He has secured a SGPA of 10 in Physics Semester and has achieved a department change from Instrumentation Engineering to Electronics and Electrical Communication Engineering. His mantra of success was rigorous solving of past year papers.</p>
+						            <p id="author_body_body_ani">He is enrolled in 4 year B.Tech under The Department of Electronics and Electrical Communication Engineering. He is currently a sophomore at IIT Kharagpur. He is also a member of Aerial Robotics Kharagpur(ARK). He has secured a SGPA of 10 in Physics Semester and has achieved a department change from Instrumentation Engineering to Electronics and Electrical Communication Engineering. His mantra of success was rigorous solving of past year papers.</p>
 						            <a href="https://www.facebook.com/AadiSwadipto" class="fa fa-facebook"></a>
 						        </div>
 						    </div>
