--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						</div>
 						<div class="col-md-6"  class="div2">
 							<div class="hovereffect" id="author_images">
-						        <img class="img-responsive" src="kanishka2.jpg" alt="Kanishka" id="author_images_body">
+						        <img class="img-responsive" src="kanishka.jpg" alt="Kanishka" id="author_images_body">
 						        <div class="overlay">
 						            <h2 id="author_body_head">Kanishka Halder</h2>
 						            <p id="author_body_body">He is enrolled in 5 year integrated Dual Degree Course under the Department of Electronics and Communication Engineering. He is currently a sophomore at IIT Kharagpur and an Executive Member of The Institute Wellness Group (IWG). His well-meant animus and unquenchable thirst for academic empowerment was a cardinal factor behind the foundation of this book. He fervently believes that “Education is the most powerful weapon which you can use to change the World.”</p>
